# ilreco

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: advanced-mt.md  cpp-api.md  development.md  getting-started.md  index.md  install.md  memory-model.md  package-lock.json  package.json  profiles.md  python-api.md  threading.md
docs/.vitepress/: config.mjs
python/ilreco/: __init__.py
python/src/: _core.c
python/tests/: conftest.py  test_binding.py
src/: CMakeLists.txt
src/ilreco/: CMakeLists.txt  ilreco.c  ilreco.h  ilreco.hpp  ilrecoConfig.cmake.in
src/test/: CMakeLists.txt  ilreco_dump.cpp  ocmp.tcl
tests/: CMakeLists.txt  KNOWN_ISSUES.md  README.md
tests/benchmark/: baseline.json  bench_main.cpp
tests/common/: csv_io.h  ilreco_test_utils.h
tests/data/: expected_central_1gev.csv  expected_central_20gev.csv  expected_central_5gev.csv  expected_corners_5gev.csv  expected_edges_5gev.csv  expected_pairs.csv  expected_pim_uniform.csv  expected_synthetic.csv  input_central_1gev.csv  input_central_20gev.csv  input_central_5gev.csv  input_corners_5gev.csv  input_edges_5gev.csv  input_pairs.csv  input_pim_uniform.csv  input_synthetic.csv  test_golden.cpp
tests/smoke/: test_smoke.cpp
tests/tools/: gen_golden.cpp
tests/unit/: test_cell_mask.cpp  test_context_api.cpp  test_contracts.cpp  test_cpp_wrapper.cpp  test_edge_inputs.cpp
